--- a/appspec.yml
+++ b/appspec.yml
@@ -1,5 +1,5 @@
-version: 0.0
-os:ubuntu
+version: 1.0
+os: linux
 files:
  - source: /index.html
- - destination /var/www/html/
+ - destination: /var/www/html/
